# first_voxel_engine

./: Cargo.toml  LICENSE  README.md  build.rs
res/: turkey.mtl
src/: camera.rs  camera_controller.rs  color.rs  depth_pass.rs  depth_pass.wgsl  light.rs  light.wgsl  main.rs  model.rs  rendering.rs  shader.wgsl  texture.rs  voxel_tools.rs
src/rendering/: gpu_resources.rs  render_utils.rs  vertex_desc.rs  vertex_instance.rs
src/voxel_tools/: chunk.rs  chunks.rs  direction.rs  mesh_builder.rs  quad.rs  rendering.rs  voxel.rs
src/voxel_tools/rendering/: voxel.wgsl  voxel_pipeline.rs  voxel_rendering.rs  voxel_vertex.rs
