[package]
name = "teal_mountain"
version = "0.1.0"
authors = ["TanTanDev <tantangamedev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = {version = "1.4", features = ["derive"]}
anyhow = "1.0"
tobj = "3.0.0"
rand = "0.8.3"
lazy_static = "1.4.0"
noise = "0.7.0"

# pooling library
lifeguard = "0.6.1"
generational-arena = "0.2.8"


[dependencies.wgpu]
version = "0.8.1"
#features = ["vulkan-portability"]


[build-dependencies]
shaderc = "0.7"
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"